# tau-web-ui

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: known-limitations-v1.md  seams.md
docs/superpowers/plans/: 2026-05-31-app-shell-navigation.md  (+14 more)
docs/verification/: README.md
fake-tau-serve/: Cargo.toml
fake-tau-serve/src/: main.rs
gateway/: Cargo.toml
gateway/src/: lib.rs  main.rs  state.rs
gateway/src/adapters/: log.rs  mod.rs
gateway/src/api/: agents.rs  config.rs  credentials.rs  graph.rs  meta.rs  mod.rs  packages.rs  plugins.rs  projects.rs  providers.rs  runs.rs  scope.rs  ship.rs  skills.rs  tools.rs  workflows.rs  ws.rs
gateway/src/checks/: mod.rs
gateway/src/config/: mod.rs
gateway/src/credentials/: mod.rs
gateway/src/graph/: mod.rs
gateway/src/plugins/: mod.rs
gateway/src/projects/: cloner.rs  mod.rs
gateway/src/providers/: mod.rs
gateway/src/serve_client/: jsonrpc.rs  mod.rs
gateway/src/ship/: mod.rs
gateway/src/skills/: mod.rs
gateway/src/store/: mod.rs
gateway/src/tools/: mod.rs
gateway/src/trace/: mod.rs
gateway/tests/: acceptance.rs  agents_api.rs  graph_api.rs  plugins_api.rs  projects_api.rs  providers_api.rs  real_tau_packages.rs  run_orchestration.rs  serve_client_e2e.rs  skills_api.rs  tools_api.rs  workspace.rs  ws_e2e.rs
web/: .prettierignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/.storybook/: main.ts  preview.tsx  storybook-theme.css
web/e2e/: run.spec.ts
web/src/: App.tsx  main.tsx
(+127 files in other folders)
